# u2db

./: .bzrignore  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README  custom.supp  setup.py  sql_to_c.py  u1db-client  u1db-serve
c/: compat.h  u1db.c  u1db.h
cmake/Modules/: FindJSON.cmake  FindSqlite3.cmake  ReplicatePythonSourceTree.cmake
cosas/: cosas.py  cosas.ui  sync.ui  test_cosas.py  ui.py
doc/: sqlite_schema.txt
html-docs/: Makefile  conf.py  conflicts.rst  doxygen.conf  high-level-api.rst  index.rst  intro.dox  philosophy.rst  quickstart.rst  reference-implementation.rst  tutorial.rst
include/u1db/: compat.h  u1db.h  u1db_http_internal.h  u1db_internal.h  u1db_vectorclock.h
python/: Makefile  setup.py
python/u1db/: __init__.py  vectorclock.py
python/u1db/backends/: __init__.py  c_wrapper.pyx  sqlite_backend.py
python/u1db/tests/: __init__.py  test_backends.py  test_c_wrapper.py  test_inmemory.py  test_sqlite_backend.py  test_sqlite_backends.py  test_vectorclock.py
src/: CMakeLists.txt  mkstemp_compat.c  u1db.c  u1db_http_sync_target.c  u1db_query.c  u1db_sync_target.c  u1db_uuid.c  u1db_vectorclock.c
u1db/: __init__.py  buffers.py  errors.py  query_parser.py  remote_requests.py  remote_sync_server.py  sync.py  vectorclock.py
u1db/backends/: __init__.py  c_wrapper.pyx  dbschema.sql  inmemory.py  sqlite_backend.py
u1db/commandline/: __init__.py  client.py  command.py  serve.py
u1db/compat/: __init__.py
u1db/remote/: __init__.py  basic_auth_middleware.py  client.py  cors_middleware.py  http_app.py  http_client.py  http_database.py  http_errors.py  http_target.py  oauth_middleware.py  protocol.py  requests.py  server_state.py  sync_server.py  sync_target.py
u1db/tests/: __init__.py  c_backend_wrapper.pyx  test_auth_middleware.py  test_backends.py  test_buffer.py  test_c_backend.py  test_client.py  test_common_backend.py  test_cors_middleware.py  test_document.py  test_errors.py  test_http_app.py  test_http_client.py  test_http_database.py  test_https.py  test_inmemory.py  test_oauth_middleware.py  test_open.py  test_query_parser.py  test_remote_client.py  test_remote_protocol.py  test_remote_requests.py  test_remote_sync_server.py  test_remote_sync_target.py  test_server_state.py  test_sqlite_backend.py  test_sync.py  test_test_infrastructure.py  test_vectorclock.py
u1db/tests/commandline/: __init__.py  test_client.py  test_command.py  test_serve.py
u1db/tests/testing-certs/: Makefile  cacert.pem  testing.cert  testing.key
u1dbclient/: __init__.py  client.py
u1dbclient/tests/: test_client.py
u1todo/: test_u1todo.py  u1todo.py  u1todo.ui  ui.py
